@@ -1,23 +1,21 @@
-import { HttpClient } from "@angular/common/http";
 import { Injectable } from "@angular/core";
 import { AppetizerRecipeItemModel } from "../store/appetizers-and-snacks/appetizeritem.model";
+import { AngularFireDatabase } from "@angular/fire/compat/database";
 
 @Injectable({
     providedIn: 'root'
 })
 export class Recipes2Service {
-    private baseURL:string = "https://allrecipes-602f9-default-rtdb.firebaseio.com/";
-    private recipesEndpoint:string = "Recipes-apps.json" ;
-
-    constructor(private http:HttpClient) {
+    
+    constructor(private db: AngularFireDatabase) {
 
     }
 
     public getRecipes() {
-        return this.http.get<AppetizerRecipeItemModel []>(this.baseURL + this.recipesEndpoint);
+        return this.db.list<AppetizerRecipeItemModel []>("Recipes-apps").valueChanges;
     }
 
     public getRecipe(index:number) {
-        return this.http.get<AppetizerRecipeItemModel>(this.baseURL + 'Recipes-apps/' + index + '.json');
+        
     }
 }
